youtube/ingress-rsc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - angular-app.com
    secretName: tls-secret
  rules:
    - host: "angular-app.com"
      http:
        paths:
          - pathType: Prefix
            path: /sample-1
            backend:
              service:
                name: sample-1
                port:
                  number: 3000
